# robotics-packaging

./: .python-version  CMakeLists.txt  README.md  config.yaml  main.py  package.xml  packaging_node.py  packaging_node_client.py  packaging_solver.py  requirements.txt  setup.py
action/: Packing.action
cfg/: packing_config.yaml
data/: product_boxes.csv
genetic-packing/: bin.py  chromosome.py  configuration.py  container.py  encode.py  genetic_algorithms.py  geometry.py  placer.py  plott.py  solver.py  threadz.py
genetic_packing/: chromosome.py  configuration.py  container.py  encode.py  placer.py  plott.py  solver.py  threadz.py
knapsack/: ant_momkp.py  dynamic_programming.py
launch/: packing.launch
src/genetic_packing/: chromosome.py  container.py  encode.py  geometry.py  placement.py  placer.py  plott.py  solver.py  threadz.py
